src/styles/components/collapse.scss
.collapse {
	position: relative;
	overflow: hidden;

	.arrow-up {
		cursor: pointer;
		position: absolute;
		height: 16px;
		top: 5px;
		right: 15px;
		transform: rotate(270deg);
		animation: uparrowtation 0.3s ease-out;
		@keyframes uparrowtation {
			0% {
				transform: rotate(90deg);
			}
			100% {
				transform: rotate(270deg);
			}
		}
	}

	.arrow-down {
		@extend .arrow-up;
		transform: rotate(90deg);
		animation: downarrowtation 0.3s ease-out;
		@keyframes downarrowtation {
			0% {
				transform: rotate(270deg);
			}
			100% {
				transform: rotate(90deg);
			}
		}
	}
}
.title-collapse {
	background-color: $color-primary;
	color: white;
	font-size: 13px;
	font-weight: bold;
	border-radius: 5px;
	height: 30px;
	padding-left: 10px;
	display: flex;
	align-items: center;
}
.description-container {
	overflow: hidden;
	height: 100%;
}
.description-collapse {
	margin: 13px 20px 20px 20px;
	font-size: 12px;
	font-weight: 400;
	position: relative;
	animation: reveal 0.3s linear;
	@keyframes reveal {
		0% {
			bottom: 90%;
		}	
		100% {
			bottom: 0%;
		}
	}

	li {
		font-weight: 400;
	}
}

@media (min-width: $breakpoint-mobile) {
	.collapse {
		width: 100%;

		.arrow-up {
			height: 24px;
			top: 13px;
			right: 20px;
		}
	}

	.title-collapse {
		font-size: 24px;
		height: 52px;
		border-radius: 10px;
	}

	.description-collapse {
		font-size: 18px;
	}
}

